Refactor TimelineSimulator into separate services + timeline logic update + smart observations logic